# PachiPakuGen

./: .gitignore  CLAUDE.md  LICENSE  README.md  build_dev.ps1  check_dev.ps1  index.html  package-lock.json  package.json  tsconfig.node.json
scripts/: extract_neck_mask.py
src/: App.css  App.tsx  BrushCanvas.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: export.rs  generation.rs  mod.rs  parts.rs  segmentation.rs
src-tauri/src/inference/: mod.rs  neck_extract.rs  rife.rs  sam3_python.rs  segmentation.rs  session.rs
src-tauri/src/processing/: composite.rs  image_utils.rs  mod.rs
