[package]
name = "pachipakugen-app"
version = "0.1.0"
description = "Batch intermediate frame generator for pre-separated anime parts (eyes, mouth)"
authors = ["KAZUYA"]
edition = "2021"

[lib]
name = "pachipakugen_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ort = { version = "2.0.0-rc.11", features = ["directml"] }
ndarray = "0.17"
image = "0.25"
psd = "0.3"
base64 = "0.22"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
